# Aivora

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: launch.json
.streamlit/: config.toml
app/: multi_user_app.py  streamlit_app.py
app/assets/favicon/: site.webmanifest
data/: paper_portfolio.json.migrated.20260707084816
docs/: data_flow.md
scripts/: audit_data.py  auto_refresh_kite_tokens.py  backtest_today.py  bench_tick.py  check_kite_permissions.py  compare_4way_ablation.py  compare_cooldown.py  compare_feature_ablation.py  compare_live_vs_backtest.py  compare_trade_limits.py  compare_vol_filter.py  debug_closing_artifact.py  deploy.sh  freeze_model.py  generate_access_token.py  importance_and_shap.py  init_webapp_db.py  iterate.py  kite_backfill_options.py  kite_options_history_probe.py  refresh_dhan_token.py  retrain.py  run_auth_server.py  run_dashboard.py  run_historical_load.py  run_pipeline.py  run_worker.py  test_pipeline_robustness.py  time_window_ablation.py  train_model.py  verify_slim_features_parity.py  walk_forward_limits.py  walk_forward_vol_compare.py
src/aivora/: __init__.py
src/aivora/backtest/: __init__.py  backtester.py  costs.py
src/aivora/live/: __init__.py  inference.py  kite_auth.py  kite_client.py  live_executor.py  paper_executor.py  portfolio.py  position_tracker.py  safety.py  scheduler.py  (+1 more)
tests/: conftest.py  test_database.py  test_feature_engineering.py  test_final_integration.py  test_phase2_headless.py  test_trailing_and_cooldown.py
(+32 files in other folders)
